# Patcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  commandshell.json  patcher_ru_RU.ts
include/: commandtable.h  commandwind.h  device.h  devicedelegate.h  devicefiltermodel.h  deviceicmp.h  devicemodel.h  jsoncontroller.h  mainwindow.h  patcherfunc.h  sshchannel.h  sshclient.h  sshkey.h  sshprocess.h  sshsftp.h  sshsftpcommand.h  sshsftpcommandsend.h  tableitem.h
srs/: commandtable.cpp  commandwind.cpp  commandwind.ui  device.cpp  devicedelegate.cpp  devicefiltermodel.cpp  deviceicmp.cpp  devicemodel.cpp  jsoncontroller.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  patcherfunc.cpp  sshchannel.cpp  sshclient.cpp  sshprocess.cpp  sshscpsend.cpp  sshsftp.cpp  sshsftpcommandsend.cpp  tableitem.cpp
